Fixed Dark Mode Color of Accordion Link

--- a/public/css/dark-mode.css
+++ b/public/css/dark-mode.css
@@ -1,3 +1,4 @@
+:root{--light-green:invert(85%) sepia(16%) saturate(866%) hue-rotate(75deg) brightness(96%) contrast(91%);}
 .dark{color: #f1f1f1;}
 .dark .logo {background-image: url(../files/arsentech-dark.svg);background-size: contain;}
 .dark .menu-toggler span {background-color: #fff;}
@@ -24,7 +25,7 @@
 .dark .contact-form .btn:hover {background: #1dd1a1;color: #353b48;}
 .dark .accordion-item{background-color: #283042;box-shadow: .5rem 2px .5rem rgba(0,0,0,.1);}
 .dark .accordion-link{color: rgba(255,255,255,.8);background-color: #283042;}
-.dark .accordion-link iconify-icon{color: #92e5a1;}
+.dark .accordion-link img{filter:var(--light-green);}
 .dark .answer{background-color: #212838;}
 .dark .answer::before{background-color: #22b455;}
 .dark .answer p{color: rgba(255,255,255,.6);}
